<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="me.pzheng.conn.ConnectFragment">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button android:id="@+id/button_data_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/button_data_on"
            android:onClick="dataOn" />

        <Button android:id="@+id/button_data_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_data_on"
            android:layout_centerHorizontal="true"
            android:text="@string/button_data_off"
            android:onClick="dataOff"/>

        <Button android:id="@+id/button_data_conn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_data_off"
            android:layout_centerHorizontal="true"
            android:text="@string/button_data_conn"
            android:onClick="onClickDataConn" />
    </RelativeLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_import_export"
        fab:fab_colorNormal="@color/myAccentColor"
        fab:fab_colorPressed="@color/myAccentPressedColor"
        fab:fab_colorRipple="@color/myRippleColor"
        android:onClick="onClickDataConn"/>

</FrameLayout>
